# Building_MCP_Server_and_Client

./: README.md  packages.txt  pyproject.toml
.devcontainer/: devcontainer.json
First MCP Terminal Server/: README.md  main.py
Job Recommender MCP/: .gitignore  README.md  app.py  database.py  pyproject.toml  requirements.txt  resume_template.html
Job Recommender MCP/src/: helper.py  job_api.py
Job_Recommender_App/: .gitignore  README.md  antigravity_system_prompt.md  app.py  helper_architecture.md  mcp_server.py  requirements.txt
Job_Recommender_App/pages/: ai_search.py  browse_jobs.py
Job_Recommender_App/src/: database.py  helper.py  job_api.py  location_utils.py  ui_components.py
Job_Recommender_App/supabase/: EDGE_FUNCTIONS_SETUP.md
Job_Recommender_App/supabase/.temp/: linked-project.json  pooler-url  project-ref
Job_Recommender_App/supabase/migrations/: schedule_linkedin_posts_cron.sql
Job_Recommender_App/video_guide/: Step_By_Step_Creation_Guide.md
MCP Client (React & Electron)/: README.md  backend.py  client.py  mcp_client_creation_guide.md  pyproject.toml  test_connection.py
MCP Client (React & Electron)/electron/: main.js  package-lock.json  package.json  preload.js  project-path.json
MCP Client (React & Electron)/frontend/: package-lock.json  package.json  vite_log.txt
Storyforge-mcp/: README.md  app.py  logic.py  main.py  mcp_server.py  pyproject.toml
Theory of MCP/: MCP_Comprehensive_Summary.md  README.md
Weather-mcp/: README.md  log.txt  main.py
Weather-mcp/tools/: weather.py
tools/: weather.py
(+4 files in other folders)
