[project]
name = "job-recommender-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-client>=2.5.0",
    "mcp[cli]>=1.26.0",
    "openai>=2.26.0",
    "pymupdf>=1.27.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]
